--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <title>web-icon exemple</title>
   </head>
   <body>
-    <div id="container">
-    </div>
+    <div id="content"></div>   
     <script src="bundle.js"></script>
   </body>
 </html>
