--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="content"></div>
     <div id="content-noLink"></div>
+    <a href="https://github.com/nlarche/web-icon">Source</a>
     <script src="bundle.js"></script>  
 </body>
 
